Fix autocomplete z-index to overlap controls.

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -145,7 +145,7 @@ select[name='language'] {
 }
 
 .autocomplete-result-list {
-  z-index: 501 !important;
+  z-index: 1001 !important;
 }
 
 .a4a {
